[project]
name = "agentwallet-api"
version = "0.1.0"
description = "AgentWallet Protocol - AI Agent Wallet Infrastructure on Solana"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.0",
    "arq>=0.26",
    "httpx>=0.27",
    "solders>=0.27.1",
    "base58>=2.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "structlog>=24.0",
    "cryptography>=42.0",
    "stripe>=8.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0",
    "web3>=7.0",
    "eth-account>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx",
    "ruff>=0.5",
    "mypy>=1.11",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["packages/api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/api/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
